gts-macros/tests/compile_fail/nested_direct_serialize.stderr
error[E0277]: the trait bound `AuditEventV1: serde::Serialize` is not satisfied
  --> tests/compile_fail/nested_direct_serialize.rs:39:35
   |
39 |     let _ = serde_json::to_value(&nested);
   |             --------------------  ^^^^^^ unsatisfied trait bound
   |             |
   |             required by a bound introduced by this call
   |
help: the trait `_::_serde::Serialize` is not implemented for `AuditEventV1`
  --> tests/compile_fail/nested_direct_serialize.rs:30:1
   |
30 | pub struct AuditEventV1 {
   | ^^^^^^^^^^^^^^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `AuditEventV1` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `_::_serde::Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
   = note: required for `&AuditEventV1` to implement `_::_serde::Serialize`
note: required by a bound in `to_value`
  --> $CARGO/serde_json-$VERSION/src/value/mod.rs
   |
   | pub fn to_value<T>(value: T) -> Result<Value, Error>
   |        -------- required by a bound in this function
   | where
   |     T: Serialize,
   |        ^^^^^^^^^ required by this bound in `to_value`
